# OpenWhisper

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LINUX.md  MACOS.md  OpenWhisper-linux.spec  OpenWhisper-macos.spec  OpenWhisper.spec  OpenWhisper.wxs  README.md  SECURITY.md  USAGE.md  build-linux.sh  build-macos.sh  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-linux.yml  build-macos.yml
docs/: index.html  styles.css
macos/: entitlements.plist
openwhisper/: __init__.py  __main__.py  app.py  config.py  coordinator.py  errors.py  history.py  keyring_store.py  keys.py  languages.py  logging_setup.py  protocols.py  settings.py  updater.py  usage.py
openwhisper/audio/: recorder.py
openwhisper/cleanup/: dictionary.py  heuristic.py  pipeline.py  snippets.py
openwhisper/commands/: command.py  interpreter.py
openwhisper/hotkey/: display.py  hotkey_manager.py
openwhisper/insertion/: paste_inserter.py
openwhisper/platform/: __init__.py  base_inserter.py
openwhisper/platform/linux/: __init__.py  insertion.py
openwhisper/stt/: groq_provider.py  whisper_provider.py
openwhisper/ui/: history_window.py  hud.py  onboarding.py  settings_window.py  settings_window_old.py  tray.py  ui_state.py  update_dialog.py
scripts/: download_flags.py  generate_icons.py  make-icns.sh  setup-dev-signing.sh
tests/: test_cleanup_pipeline.py  test_command_interpreter.py  test_dictionary.py  test_heuristic.py  test_hotkey_display.py  test_snippets.py
(+9 files in other folders)
